Added Post openapi specification
