# devices/views.py
@@ -1,10 +1,13 @@
 from flask import abort
-from devices.models import Device, db, DeviceSchema
+from devices.models import Device, db, DeviceSchema, Product, ProductSchema
 from sqlalchemy.exc import OperationalError
 from connexion import NoContent
 
 device_schema = DeviceSchema()
 device_schemas = DeviceSchema(many=True)
+
+product_schema = ProductSchema()
+product_schemas = ProductSchema(many=True)
 
 
 def get_devices():
@@ -95,6 +98,100 @@ def delete_device(device_id):
         db.session.commit()
     except TimeoutError:
         abort(408)
+    except ValueError:
+        abort(404)
+    except Exception:
+        abort(500)
+
+    return NoContent, 204
+
+
+def get_products():
+    """
+
+    :return: List of products
+    """
+    try:
+        products_list = Product.query.all()
+        result = product_schemas.dump(products_list)
+    except TimeoutError:
+        abort(408, "Timeout error, please try again")
+    except Exception:
+        abort(500)
+
+    return result
+
+
+def get_product(product_id):
+    """
+
+    :param product_id:
+    :return:
+    """
+    try:
+        product = Product.query.filter_by(id=product_id).first()
+        result = product_schema.dump(product)
+        if product is None:
+            raise ValueError
+    except TimeoutError:
+        abort(408)
+    except ValueError:
+        abort(404)
+    except Exception:
+        abort(500)
+
+    return result
+
+
+def post_product(product):
+    """
+
+    :param product:
+    :return:
+    """
+    try:
+        new_product = Product(**product)
+        db.session.add(new_product)
+        db.session.commit()
+    except TimeoutError:
+        abort(400)
+    except OperationalError:
+        abort(503)
+    except Exception:
+        abort(500)
+
+    return NoContent
+
+
+def put_product(product_id, product):
+    """
+
+    :return:
+    """
+    try:
+        Product.query.filter_by(id=product_id).update(product)
+    except TimeoutError:
+        abort(400)
+    except OperationalError:
+        abort(503)
+    except Exception:
+        abort(500)
+
+
+def delete_product(product_id):
+    """
+
+    :param product_id:
+    :return:
+    """
+    try:
+        product = Product.query.filter_by(id=product_id).first()
+        if product is None:
+            raise ValueError
+        db.session.delete(product)
+        db.session.commit()
+    except TimeoutError:
+        abort(400)
     except ValueError:
         abort(404)
     except Exception:
